# brainfuck-compiler

./: .clang-format  CMakeLists.txt  README.md
include/: ast.h  codegen_x86.h  ir.h  lexer.h  optimizer.h  parser.h  runtime.h
src/: codegen_x86.cpp  ir.cpp  lexer.cpp  main.cpp  optimizer.cpp  parser.cpp  runtime.cpp
